obsidian-tidy-ast/src/ast/node/snapshots/obsidian_tidy_ast__ast__node__heading__tests__parse_with_format.snap
---
source: obsidian-tidy-ast/src/ast/node/heading.rs
expression: ast
---
{
  "Root": {
    "children": [
      {
        "Heading": {
          "level": "H1",
          "children": [
            {
              "Strong": {
                "children": [
                  {
                    "Text": "Super",
                    "offset": {
                      "start": 4,
                      "end": 9
                    }
                  }
                ]
              },
              "offset": {
                "start": 2,
                "end": 11
              }
            },
            {
              "Text": " ",
              "offset": {
                "start": 11,
                "end": 12
              }
            },
            {
              "InlineCode": "Definition",
              "offset": {
                "start": 12,
                "end": 24
              }
            }
          ]
        },
        "offset": {
          "start": 0,
          "end": 25
        }
      },
      {
        "Paragraph": {
          "children": [
            {
              "Text": "Simple text",
              "offset": {
                "start": 25,
                "end": 36
              }
            }
          ]
        },
        "offset": {
          "start": 25,
          "end": 36
        }
      }
    ]
  },
  "offset": {
    "start": 0,
    "end": 36
  }
}
